experiments/minic/antlr4/minicParser.cpp

// Generated from minic.g4 by ANTLR 4.13.2



#include "minicParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct MinicParserStaticData final {
  MinicParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MinicParserStaticData(const MinicParserStaticData&) = delete;
  MinicParserStaticData(MinicParserStaticData&&) = delete;
  MinicParserStaticData& operator=(const MinicParserStaticData&) = delete;
  MinicParserStaticData& operator=(MinicParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag minicParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<MinicParserStaticData> minicParserStaticData = nullptr;

void minicParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (minicParserStaticData != nullptr) {
    return;
  }
#else
  assert(minicParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<MinicParserStaticData>(
    std::vector<std::string>{
      "start", "n2", "decl", "var_decl", "type", "idents", "func_decl", 
      "rtype", "args", "n0", "params", "n1", "n3", "n4"
    },
    std::vector<std::string>{
      "", "'if'", "'else'", "'while'", "'do'", "'int'", "'float'", "'bool'", 
      "'char'", "'void'", "'('", "')'", "'{'", "'}'", "';'", "','", "'='", 
      "'+'", "'-'", "'<'"
    },
    std::vector<std::string>{
      "", "IF", "ELSE", "WHILE", "DO", "INT_T", "FLOAT_T", "BOOL_T", "CHAR_T", 
      "VOID_T", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "SEMI", "COMMA", 
      "ASSIGN", "PLUS", "MINUS", "LT", "IDENT", "NUM"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  minicParserStaticData = std::move(staticData);
}

}

minicParser::minicParser(TokenStream *input) : minicParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

minicParser::minicParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  minicParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *minicParserStaticData->atn, minicParserStaticData->decisionToDFA, minicParserStaticData->sharedContextCache, options);
}

minicParser::~minicParser() {
  delete _interpreter;
}

const atn::ATN& minicParser::getATN() const {
  return *minicParserStaticData->atn;
}

std::string minicParser::getGrammarFileName() const {
  return "minic.g4";
}

const std::vector<std::string>& minicParser::getRuleNames() const {
  return minicParserStaticData->ruleNames;
}

const dfa::Vocabulary& minicParser::getVocabulary() const {
  return minicParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView minicParser::getSerializedATN() const {
  return minicParserStaticData->serializedATN;
}


//----------------- StartContext ------------------------------------------------------------------

minicParser::StartContext::StartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

minicParser::N2Context* minicParser::StartContext::n2() {
  return getRuleContext<minicParser::N2Context>(0);
}

tree::TerminalNode* minicParser::StartContext::EOF() {
  return getToken(minicParser::EOF, 0);
}


size_t minicParser::StartContext::getRuleIndex() const {
  return minicParser::RuleStart;
}


minicParser::StartContext* minicParser::start() {
  StartContext *_localctx = _tracker.createInstance<StartContext>(_ctx, getState());
  enterRule(_localctx, 0, minicParser::RuleStart);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(28);
    n2();
    setState(29);
    match(minicParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- N2Context ------------------------------------------------------------------

minicParser::N2Context::N2Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<minicParser::DeclContext *> minicParser::N2Context::decl() {
  return getRuleContexts<minicParser::DeclContext>();
}

minicParser::DeclContext* minicParser::N2Context::decl(size_t i) {
  return getRuleContext<minicParser::DeclContext>(i);
}


size_t minicParser::N2Context::getRuleIndex() const {
  return minicParser::RuleN2;
}


minicParser::N2Context* minicParser::n2() {
  N2Context *_localctx = _tracker.createInstance<N2Context>(_ctx, getState());
  enterRule(_localctx, 2, minicParser::RuleN2);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(34);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 992) != 0)) {
      setState(31);
      decl();
      setState(36);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

minicParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

minicParser::Var_declContext* minicParser::DeclContext::var_decl() {
  return getRuleContext<minicParser::Var_declContext>(0);
}

minicParser::Func_declContext* minicParser::DeclContext::func_decl() {
  return getRuleContext<minicParser::Func_declContext>(0);
}


size_t minicParser::DeclContext::getRuleIndex() const {
  return minicParser::RuleDecl;
}


minicParser::DeclContext* minicParser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 4, minicParser::RuleDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(39);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(37);
      var_decl();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(38);
      func_decl();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_declContext ------------------------------------------------------------------

minicParser::Var_declContext::Var_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

minicParser::TypeContext* minicParser::Var_declContext::type() {
  return getRuleContext<minicParser::TypeContext>(0);
}

minicParser::IdentsContext* minicParser::Var_declContext::idents() {
  return getRuleContext<minicParser::IdentsContext>(0);
}

tree::TerminalNode* minicParser::Var_declContext::SEMI() {
  return getToken(minicParser::SEMI, 0);
}


size_t minicParser::Var_declContext::getRuleIndex() const {
  return minicParser::RuleVar_decl;
}


minicParser::Var_declContext* minicParser::var_decl() {
  Var_declContext *_localctx = _tracker.createInstance<Var_declContext>(_ctx, getState());
  enterRule(_localctx, 6, minicParser::RuleVar_decl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(41);
    type();
    setState(42);
    idents();
    setState(43);
    match(minicParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

minicParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* minicParser::TypeContext::INT_T() {
  return getToken(minicParser::INT_T, 0);
}

tree::TerminalNode* minicParser::TypeContext::FLOAT_T() {
  return getToken(minicParser::FLOAT_T, 0);
}

tree::TerminalNode* minicParser::TypeContext::BOOL_T() {
  return getToken(minicParser::BOOL_T, 0);
}

tree::TerminalNode* minicParser::TypeContext::CHAR_T() {
  return getToken(minicParser::CHAR_T, 0);
}


size_t minicParser::TypeContext::getRuleIndex() const {
  return minicParser::RuleType;
}


minicParser::TypeContext* minicParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 8, minicParser::RuleType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 480) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdentsContext ------------------------------------------------------------------

minicParser::IdentsContext::IdentsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* minicParser::IdentsContext::IDENT() {
  return getToken(minicParser::IDENT, 0);
}

tree::TerminalNode* minicParser::IdentsContext::COMMA() {
  return getToken(minicParser::COMMA, 0);
}

minicParser::IdentsContext* minicParser::IdentsContext::idents() {
  return getRuleContext<minicParser::IdentsContext>(0);
}


size_t minicParser::IdentsContext::getRuleIndex() const {
  return minicParser::RuleIdents;
}


minicParser::IdentsContext* minicParser::idents() {
  IdentsContext *_localctx = _tracker.createInstance<IdentsContext>(_ctx, getState());
  enterRule(_localctx, 10, minicParser::RuleIdents);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(47);
    match(minicParser::IDENT);
    setState(50);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == minicParser::COMMA) {
      setState(48);
      match(minicParser::COMMA);
      setState(49);
      idents();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Func_declContext ------------------------------------------------------------------

minicParser::Func_declContext::Func_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

minicParser::RtypeContext* minicParser::Func_declContext::rtype() {
  return getRuleContext<minicParser::RtypeContext>(0);
}

tree::TerminalNode* minicParser::Func_declContext::IDENT() {
  return getToken(minicParser::IDENT, 0);
}

tree::TerminalNode* minicParser::Func_declContext::LPAREN() {
  return getToken(minicParser::LPAREN, 0);
}

tree::TerminalNode* minicParser::Func_declContext::RPAREN() {
  return getToken(minicParser::RPAREN, 0);
}

tree::TerminalNode* minicParser::Func_declContext::LBRACE() {
  return getToken(minicParser::LBRACE, 0);
}

tree::TerminalNode* minicParser::Func_declContext::RBRACE() {
  return getToken(minicParser::RBRACE, 0);
}

minicParser::ArgsContext* minicParser::Func_declContext::args() {
  return getRuleContext<minicParser::ArgsContext>(0);
}

std::vector<minicParser::N0Context *> minicParser::Func_declContext::n0() {
  return getRuleContexts<minicParser::N0Context>();
}

minicParser::N0Context* minicParser::Func_declContext::n0(size_t i) {
  return getRuleContext<minicParser::N0Context>(i);
}


size_t minicParser::Func_declContext::getRuleIndex() const {
  return minicParser::RuleFunc_decl;
}


minicParser::Func_declContext* minicParser::func_decl() {
  Func_declContext *_localctx = _tracker.createInstance<Func_declContext>(_ctx, getState());
  enterRule(_localctx, 12, minicParser::RuleFunc_decl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(52);
    rtype();
    setState(53);
    match(minicParser::IDENT);
    setState(54);
    match(minicParser::LPAREN);
    setState(56);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 480) != 0)) {
      setState(55);
      args();
    }
    setState(58);
    match(minicParser::RPAREN);
    setState(59);
    match(minicParser::LBRACE);
    setState(63);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 3167738) != 0)) {
      setState(60);
      n0();
      setState(65);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(66);
    match(minicParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RtypeContext ------------------------------------------------------------------

minicParser::RtypeContext::RtypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

minicParser::TypeContext* minicParser::RtypeContext::type() {
  return getRuleContext<minicParser::TypeContext>(0);
}

tree::TerminalNode* minicParser::RtypeContext::VOID_T() {
  return getToken(minicParser::VOID_T, 0);
}


size_t minicParser::RtypeContext::getRuleIndex() const {
  return minicParser::RuleRtype;
}


minicParser::RtypeContext* minicParser::rtype() {
  RtypeContext *_localctx = _tracker.createInstance<RtypeContext>(_ctx, getState());
  enterRule(_localctx, 14, minicParser::RuleRtype);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(70);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case minicParser::INT_T:
      case minicParser::FLOAT_T:
      case minicParser::BOOL_T:
      case minicParser::CHAR_T: {
        enterOuterAlt(_localctx, 1);
        setState(68);
        type();
        break;
      }

      case minicParser::VOID_T: {
        enterOuterAlt(_localctx, 2);
        setState(69);
        match(minicParser::VOID_T);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgsContext ------------------------------------------------------------------

minicParser::ArgsContext::ArgsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

minicParser::TypeContext* minicParser::ArgsContext::type() {
  return getRuleContext<minicParser::TypeContext>(0);
}

tree::TerminalNode* minicParser::ArgsContext::IDENT() {
  return getToken(minicParser::IDENT, 0);
}

tree::TerminalNode* minicParser::ArgsContext::COMMA() {
  return getToken(minicParser::COMMA, 0);
}

minicParser::ArgsContext* minicParser::ArgsContext::args() {
  return getRuleContext<minicParser::ArgsContext>(0);
}


size_t minicParser::ArgsContext::getRuleIndex() const {
  return minicParser::RuleArgs;
}


minicParser::ArgsContext* minicParser::args() {
  ArgsContext *_localctx = _tracker.createInstance<ArgsContext>(_ctx, getState());
  enterRule(_localctx, 16, minicParser::RuleArgs);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    type();
    setState(73);
    match(minicParser::IDENT);
    setState(76);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == minicParser::COMMA) {
      setState(74);
      match(minicParser::COMMA);
      setState(75);
      args();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- N0Context ------------------------------------------------------------------

minicParser::N0Context::N0Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* minicParser::N0Context::DO() {
  return getToken(minicParser::DO, 0);
}

std::vector<minicParser::N0Context *> minicParser::N0Context::n0() {
  return getRuleContexts<minicParser::N0Context>();
}

minicParser::N0Context* minicParser::N0Context::n0(size_t i) {
  return getRuleContext<minicParser::N0Context>(i);
}

tree::TerminalNode* minicParser::N0Context::WHILE() {
  return getToken(minicParser::WHILE, 0);
}

tree::TerminalNode* minicParser::N0Context::LPAREN() {
  return getToken(minicParser::LPAREN, 0);
}

minicParser::N4Context* minicParser::N0Context::n4() {
  return getRuleContext<minicParser::N4Context>(0);
}

tree::TerminalNode* minicParser::N0Context::RPAREN() {
  return getToken(minicParser::RPAREN, 0);
}

tree::TerminalNode* minicParser::N0Context::SEMI() {
  return getToken(minicParser::SEMI, 0);
}

tree::TerminalNode* minicParser::N0Context::LBRACE() {
  return getToken(minicParser::LBRACE, 0);
}

minicParser::N1Context* minicParser::N0Context::n1() {
  return getRuleContext<minicParser::N1Context>(0);
}

tree::TerminalNode* minicParser::N0Context::IF() {
  return getToken(minicParser::IF, 0);
}

tree::TerminalNode* minicParser::N0Context::ELSE() {
  return getToken(minicParser::ELSE, 0);
}

tree::TerminalNode* minicParser::N0Context::RBRACE() {
  return getToken(minicParser::RBRACE, 0);
}

minicParser::Var_declContext* minicParser::N0Context::var_decl() {
  return getRuleContext<minicParser::Var_declContext>(0);
}


size_t minicParser::N0Context::getRuleIndex() const {
  return minicParser::RuleN0;
}


minicParser::N0Context* minicParser::n0() {
  N0Context *_localctx = _tracker.createInstance<N0Context>(_ctx, getState());
  enterRule(_localctx, 18, minicParser::RuleN0);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(115);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(78);
      match(minicParser::DO);
      setState(79);
      n0();
      setState(80);
      match(minicParser::WHILE);
      setState(81);
      match(minicParser::LPAREN);
      setState(82);
      n4();
      setState(83);
      match(minicParser::RPAREN);
      setState(84);
      match(minicParser::SEMI);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(86);
      match(minicParser::LBRACE);
      setState(87);
      n1();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(88);
      n4();
      setState(89);
      match(minicParser::SEMI);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(91);
      match(minicParser::IF);
      setState(92);
      match(minicParser::LPAREN);
      setState(93);
      n4();
      setState(94);
      match(minicParser::RPAREN);
      setState(95);
      n0();
      setState(96);
      match(minicParser::ELSE);
      setState(97);
      n0();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(99);
      match(minicParser::IF);
      setState(100);
      match(minicParser::LPAREN);
      setState(101);
      n4();
      setState(102);
      match(minicParser::RPAREN);
      setState(103);
      n0();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(105);
      match(minicParser::LBRACE);
      setState(106);
      match(minicParser::RBRACE);
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(107);
      match(minicParser::SEMI);
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(108);
      match(minicParser::WHILE);
      setState(109);
      match(minicParser::LPAREN);
      setState(110);
      n4();
      setState(111);
      match(minicParser::RPAREN);
      setState(112);
      n0();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(114);
      var_decl();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamsContext ------------------------------------------------------------------

minicParser::ParamsContext::ParamsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

minicParser::N4Context* minicParser::ParamsContext::n4() {
  return getRuleContext<minicParser::N4Context>(0);
}

tree::TerminalNode* minicParser::ParamsContext::COMMA() {
  return getToken(minicParser::COMMA, 0);
}

minicParser::ParamsContext* minicParser::ParamsContext::params() {
  return getRuleContext<minicParser::ParamsContext>(0);
}


size_t minicParser::ParamsContext::getRuleIndex() const {
  return minicParser::RuleParams;
}


minicParser::ParamsContext* minicParser::params() {
  ParamsContext *_localctx = _tracker.createInstance<ParamsContext>(_ctx, getState());
  enterRule(_localctx, 20, minicParser::RuleParams);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    n4();
    setState(120);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == minicParser::COMMA) {
      setState(118);
      match(minicParser::COMMA);
      setState(119);
      params();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- N1Context ------------------------------------------------------------------

minicParser::N1Context::N1Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* minicParser::N1Context::RBRACE() {
  return getToken(minicParser::RBRACE, 0);
}

minicParser::N0Context* minicParser::N1Context::n0() {
  return getRuleContext<minicParser::N0Context>(0);
}

minicParser::N1Context* minicParser::N1Context::n1() {
  return getRuleContext<minicParser::N1Context>(0);
}


size_t minicParser::N1Context::getRuleIndex() const {
  return minicParser::RuleN1;
}


minicParser::N1Context* minicParser::n1() {
  N1Context *_localctx = _tracker.createInstance<N1Context>(_ctx, getState());
  enterRule(_localctx, 22, minicParser::RuleN1);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(126);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case minicParser::RBRACE: {
        enterOuterAlt(_localctx, 1);
        setState(122);
        match(minicParser::RBRACE);
        break;
      }

      case minicParser::IF:
      case minicParser::WHILE:
      case minicParser::DO:
      case minicParser::INT_T:
      case minicParser::FLOAT_T:
      case minicParser::BOOL_T:
      case minicParser::CHAR_T:
      case minicParser::LPAREN:
      case minicParser::LBRACE:
      case minicParser::SEMI:
      case minicParser::IDENT:
      case minicParser::NUM: {
        enterOuterAlt(_localctx, 2);
        setState(123);
        n0();
        setState(124);
        n1();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- N3Context ------------------------------------------------------------------

minicParser::N3Context::N3Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* minicParser::N3Context::LPAREN() {
  return getToken(minicParser::LPAREN, 0);
}

minicParser::N4Context* minicParser::N3Context::n4() {
  return getRuleContext<minicParser::N4Context>(0);
}

tree::TerminalNode* minicParser::N3Context::RPAREN() {
  return getToken(minicParser::RPAREN, 0);
}

tree::TerminalNode* minicParser::N3Context::NUM() {
  return getToken(minicParser::NUM, 0);
}

tree::TerminalNode* minicParser::N3Context::IDENT() {
  return getToken(minicParser::IDENT, 0);
}

minicParser::ParamsContext* minicParser::N3Context::params() {
  return getRuleContext<minicParser::ParamsContext>(0);
}

std::vector<minicParser::N3Context *> minicParser::N3Context::n3() {
  return getRuleContexts<minicParser::N3Context>();
}

minicParser::N3Context* minicParser::N3Context::n3(size_t i) {
  return getRuleContext<minicParser::N3Context>(i);
}

tree::TerminalNode* minicParser::N3Context::PLUS() {
  return getToken(minicParser::PLUS, 0);
}

tree::TerminalNode* minicParser::N3Context::MINUS() {
  return getToken(minicParser::MINUS, 0);
}


size_t minicParser::N3Context::getRuleIndex() const {
  return minicParser::RuleN3;
}



minicParser::N3Context* minicParser::n3() {
   return n3(0);
}

minicParser::N3Context* minicParser::n3(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  minicParser::N3Context *_localctx = _tracker.createInstance<N3Context>(_ctx, parentState);
  minicParser::N3Context *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 24;
  enterRecursionRule(_localctx, 24, minicParser::RuleN3, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(141);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
    case 1: {
      setState(129);
      match(minicParser::LPAREN);
      setState(130);
      n4();
      setState(131);
      match(minicParser::RPAREN);
      break;
    }

    case 2: {
      setState(133);
      match(minicParser::NUM);
      break;
    }

    case 3: {
      setState(134);
      match(minicParser::IDENT);
      break;
    }

    case 4: {
      setState(135);
      match(minicParser::IDENT);
      setState(136);
      match(minicParser::LPAREN);
      setState(138);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 3146752) != 0)) {
        setState(137);
        params();
      }
      setState(140);
      match(minicParser::RPAREN);
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(151);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 13, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(149);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<N3Context>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleN3);
          setState(143);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(144);
          match(minicParser::PLUS);
          setState(145);
          n3(5);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<N3Context>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleN3);
          setState(146);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(147);
          match(minicParser::MINUS);
          setState(148);
          n3(4);
          break;
        }

        default:
          break;
        } 
      }
      setState(153);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 13, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}
